@@ -4623,10 +4623,20 @@ class Title implements LinkTarget {
 	 * @return Language
 	 */
 	public function getPageLanguage() {
-		global $wgLang, $wgLanguageCode;
+		global $wgContLang, $wgLang, $wgLanguageCode;
 		if ( $this->isSpecialPage() ) {
 			// special pages are in the user language
 			return $wgLang;
+		}
+
+		if ( $this->getNamespace() === NS_MEDIAWIKI ) {
+			if ( preg_match( '!/([^/]+)$!', $this->getText(), $m ) ) {
+				// The page language is given by the title suffix
+				return Language::factory( $m[1] );
+			} else {
+				// No title suffix, assume content language
+				return $wgContLang;
+			}
 		}
 
 		// Checking if DB language is set
@@ -4690,7 +4700,17 @@ class Title implements LinkTarget {
 		// @note ContentHandler::getPageViewLanguage() may need to load the
 		//   content to determine the page language!
 		$contentHandler = ContentHandler::getForTitle( $this );
-		$pageLang = $contentHandler->getPageViewLanguage( $this );
+		$pageLang = $this->getPageLanguage();
+
+		if ( $this->getNamespace() !== NS_MEDIAWIKI ) {
+			// If the user chooses a variant, the content is actually
+			// in a language whose code is the variant code.
+			$variant = $pageLang->getPreferredVariant();
+			if ( $pageLang->getCode() !== $variant ) {
+				$pageLang = Language::factory( $variant );
+			}
+		}
+
 		return $pageLang;
 	}
 
