@@ -716,41 +716,6 @@ abstract class ContentHandler {
 	}
 
 	/**
-	 * Get the language in which the content of this page is written when
-	 * viewed by user. Defaults to $this->getPageLanguage(), but if the user
-	 * specified a preferred variant, the variant will be used.
-	 *
-	 * This default implementation just returns $this->getPageLanguage( $title, $content ) unless
-	 * the user specified a preferred variant.
-	 *
-	 * Note that the pages view language is not cacheable, since it depends on user settings.
-	 *
-	 * Also note that the page language may or may not depend on the actual content of the page,
-	 * that is, this method may load the content in order to determine the language.
-	 *
-	 * @since 1.21
-	 *
-	 * @param Title $title The page to determine the language for.
-	 * @param Content $content The page's content, if you have it handy, to avoid reloading it.
-	 *
-	 * @return Language The page's language for viewing
-	 */
-	public function getPageViewLanguage( Title $title, Content $content = null ) {
-		$pageLang = $this->getPageLanguage( $title, $content );
-
-		if ( $title->getNamespace() !== NS_MEDIAWIKI ) {
-			// If the user chooses a variant, the content is actually
-			// in a language whose code is the variant code.
-			$variant = $pageLang->getPreferredVariant();
-			if ( $pageLang->getCode() !== $variant ) {
-				$pageLang = Language::factory( $variant );
-			}
-		}
-
-		return $pageLang;
-	}
-
-	/**
 	 * Determines whether the content type handled by this ContentHandler
 	 * can be used on the given page.
 	 *
